@@ -272,6 +272,8 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA i350   (EXPERIMENTAL)
        Canon PIXMA i450   (EXPERIMENTAL)
        Canon PIXMA i455   (EXPERIMENTAL)
+       Canon PIXMA i470D  (EXPERIMENTAL)
+       Canon PIXMA i550   (EXPERIMENTAL)
        Canon PIXMA iP3600 (EXPERIMENTAL)
        Canon PIXMA iP3500 (EXPERIMENTAL)
        Canon PIXMA iP3300 (EXPERIMENTAL)
